<resources>
    <string name="app_name">Pedidos WAAS</string>
    <string name="app_name_perfil">Perfil</string>
    <string name="app_name_pedido">Lista de Pedidos</string>
    <string name="app_name_seguimiento">Seguimiento de Pedidos</string>
    <string name="app_name_artitulo">Lista de Articulos</string>
    <string name="app_name_home">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Menu</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_pedidos">Pedidos</string>
    <string name="action_seguimiento">Seguimiento</string>
    <string name="action_articulos">Articulos</string>
    <string name="action_session">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvenido Pedidos WAAS</string>
    <!--

    <string name="url">http://192.168.1.15/ProyectoAndroidWebApi/api/</string>
     -->

    <string name="url">http://www.kallpasedano.com/proyecto/api/</string>
    <string name="title_activity_maps">Map</string>
</resources>
