<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_perfil"
        android:title="@string/action_perfil"
        android:icon="@drawable/ic_menu_perfil"
        app:showAsAction="never"  />

    <item android:id="@+id/action_pedidos"
        android:title="@string/action_pedidos"
        android:icon="@drawable/ic_menu_perfil"
        app:showAsAction="never" />
    <item android:id="@+id/action_pedidos_seguimiento"
        android:title="@string/action_seguimiento"
        android:icon="@drawable/ic_menu_perfil"
        app:showAsAction="never" />
    <item android:id="@+id/action_articulos"
        android:title="@string/action_articulos"
        android:icon="@drawable/ic_menu_perfil"
        app:showAsAction="never" />
    <item android:id="@+id/action_session"
        android:title="@string/action_session"
        android:icon="@drawable/ic_menu_perfil"
        app:showAsAction="never" />
</menu>